header-100%. main block-80%

--- a/index.html
+++ b/index.html
@@ -4,9 +4,78 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inika:wght@400;700&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <div class="center_block_main_header">
+               <a href="#"> <img src="verstka_Part2/images/logo.jpg" alt="text" class="logo"></a>
+               <nav class="menu_1">
+                <ul>
+                    <li><a href="#">Journal</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Work</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <div class="center_block_main_main">
+        <main>
+            <article>
+                <header>
+                    <img src="verstka_Part2/images/img1.jpg" alt="">
+                </header>
+                <h2>Duis aute irure dolor in henderit in voluptate.</h2>
+                    <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipop ex ea commo doconsequat, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur...</p>
+                    <p><a href="#" class="more">Continue Reading</a></p>
+            </article>
+            <article>
+                <header>
+                    <img src="verstka_Part2/images/img2.jpg" alt="">
+                </header>
+                <h2>Duis aute irure dolor in henderit in voluptate.</h2>
+                    <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipop ex ea commo doconsequat, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur...</p>
+                    <p><a href="#" class="more">Continue Reading</a></p>
+            </article>
+        </main>
+
+        <aside>
+            <div class="widget">
+                <h2>Search</h2>
+                <form action="" method="get">
+                    <input type="search" type="text" class="search" placeholder="What are you looking for?">
+                </form>
+            </div>
+
+            <div class="widget">
+                <h2>Categories</h2>
+                <nav class="menu_2">
+                    <ul>
+                        <li><a href="#">Weekend</a></li>
+                        <li><a href="#">Nature</a></li>
+                        <li><a href="#">Work</a></li>
+                        <li><a href="#">Holiday</a></li>
+                    </ul>
+            </div>
+
+            <div class="widget">
+                <h2>Stay Tuned.</h2>
+                <form action="" method="get">
+                    <input type="email" placeholder="Your email" class="subscribe_input">
+                    <input type="image" src="verstka_Part2/images/sbcr-btn.jpg" class="subscribe_image">
+                </form>
+            </div>
+
+            <div class="widget">
+                <h2><a href=""><img src="verstka_Part2/images/banner.jpg" alt=""></a></h2>
+            </div>
+        </aside>
+    </div>
 </body>
 </html>
