add and fix: add all blogs fix some changes

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inika:wght@400;700&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>Blog</title>
 </head>
 <body>
     <header>
@@ -66,16 +66,29 @@
 
             <div class="widget">
                 <h2>Stay Tuned.</h2>
+                <div class="subscribe">
                 <form action="" method="get">
                     <input type="email" placeholder="Your email" class="subscribe_input">
                     <input type="image" src="verstka_Part2/images/sbcr-btn.jpg" class="subscribe_image">
                 </form>
+                </div>
             </div>
 
-            <div class="widget">
+            <div class="widget widget_photo">
                 <h2><a href=""><img src="verstka_Part2/images/banner.jpg" alt=""></a></h2>
             </div>
         </aside>
+        <div class="clr"></div>
+        <div class="pager clearfix">
+            <p class="previous_link">&larr; <a href="#">Previous</a></p>
+            <p class="next_link"> <a href="#">Next</a> &rarr;</p>
+        </div>
     </div>
+    <footer>
+        <div class="center_block_main_main">
+            <a href="#"><img src="verstka_Part2/images/logo-ftr.jpg" alt=""></a>
+            <p>&copy; 2023 Blogin.com  -  All Rights Reserved  -  Find more free Templates at Pixelhint.com</p>
+        </div>
+    </footer>
 </body>
 </html>
