fix some files and folders

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="center_block_main_header">
-               <a href="#"> <img src="verstka_Part2/images/logo.jpg" alt="text" class="logo"></a>
+               <a href="#"> <img src="dopmat/images/logo.jpg" alt="text" class="logo"></a>
                <nav class="menu_1">
                 <ul>
                     <li><a href="#">Journal</a></li>
@@ -27,7 +27,7 @@
         <main>
             <article>
                 <header>
-                    <img src="verstka_Part2/images/img1.jpg" alt="">
+                    <img src="dopmat/images/img1.jpg" alt="">
                 </header>
                 <h2>Duis aute irure dolor in henderit in voluptate.</h2>
                     <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipop ex ea commo doconsequat, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -36,7 +36,7 @@
             </article>
             <article>
                 <header>
-                    <img src="verstka_Part2/images/img2.jpg" alt="">
+                    <img src="dopmat/images/img2.jpg" alt="">
                 </header>
                 <h2>Duis aute irure dolor in henderit in voluptate.</h2>
                     <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipop ex ea commo doconsequat, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -69,13 +69,13 @@
                 <div class="subscribe">
                 <form action="" method="get">
                     <input type="email" placeholder="Your email" class="subscribe_input">
-                    <input type="image" src="verstka_Part2/images/sbcr-btn.jpg" class="subscribe_image">
+                    <input type="image" src="dopmat/images/sbcr-btn.jpg" class="subscribe_image">
                 </form>
                 </div>
             </div>
 
             <div class="widget widget_photo">
-                <h2><a href=""><img src="verstka_Part2/images/banner.jpg" alt=""></a></h2>
+                <h2><a href=""><img src="dopmat/images/banner.jpg" alt=""></a></h2>
             </div>
         </aside>
         <div class="clr"></div>
@@ -86,7 +86,7 @@
     </div>
     <footer>
         <div class="center_block_main_main">
-            <a href="#"><img src="verstka_Part2/images/logo-ftr.jpg" alt=""></a>
+            <a href="#"><img src="dopmat/images/logo-ftr.jpg" alt=""></a>
             <p>&copy; 2023 Blogin.com  -  All Rights Reserved  -  Find more free Templates at Pixelhint.com</p>
         </div>
     </footer>
