--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <article>
                 <header>
                     <img src="dopmat/images/img1.jpg" alt="">
+                    <p class="publish">Create by Maskim Makaravets 26.06.2023</p>
                 </header>
                 <h2>Duis aute irure dolor in henderit in voluptate.</h2>
                     <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipop ex ea commo doconsequat, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -37,6 +38,7 @@
             <article>
                 <header>
                     <img src="dopmat/images/img2.jpg" alt="">
+                    <p class="publish">Create by Maskim Makaravets 26.06.2023</p>
                 </header>
                 <h2>Duis aute irure dolor in henderit in voluptate.</h2>
                     <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipop ex ea commo doconsequat, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
